[package]
name    = "esp-println"
version = "0.2.2"
authors = [
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
    "Jesse Braham <jesse@beta7.io>",
]
edition     = "2021"
description = "Provides `print!` and `println!` implementations various Espressif devices"
repository  = "https://github.com/esp-rs/esp-println"
license     = "MIT OR Apache-2.0"

[dependencies]
log = { version = "0.4.17", optional = true }

[features]
default = ["uart"]

# You must enable exactly 1 of the below features to support the correct chip:
esp32   = []
esp32c2 = []
esp32c3 = []
esp32s2 = []
esp32s3 = []
esp8266 = []

# You must enable exactly 1 of the below features to enable to intended
# communication method (note that "uart" is enabled by default):
uart        = []
jtag_serial = [] # C3 + S3 only!
rtt         = []
