[package]
name    = "esp-println"
version = "0.7.0"
authors = [
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
    "Jesse Braham <jesse@beta7.io>",
]
edition     = "2021"
description = "Provides `print!` and `println!` implementations various Espressif devices"
repository  = "https://github.com/esp-rs/esp-println"
license     = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["esp32c3"]
default-target = "riscv32imc-unknown-none-elf"
cargo-args = ["-Z", "build-std=core"]

[dependencies]
log = { version = "0.4.17", optional = true }
defmt = { version = "=0.3.5", optional = true }
critical-section = { version = "1.1.1", optional = true }

[features]
default = ["uart", "critical-section", "colors"]
log     = ["dep:log"]

# You must enable exactly 1 of the below features to support the correct chip:
esp32   = []
esp32c2 = []
esp32c3 = []
esp32c6 = []
esp32h2 = []
esp32s2 = []
esp32s3 = []
esp8266 = []

# You must enable exactly 1 of the below features to enable to intended
# communication method (note that "uart" is enabled by default):
uart        = []
jtag_serial = [] # C3, C6, H2, and S3 only!
rtt         = []
no-op       = []

# Enables a `defmt` backend usable with espflash. We force rzcobs encoding to simplify implementation
defmt = ["dep:defmt", "defmt?/encoding-rzcobs"]
defmt-raw = ["dep:defmt", "defmt?/encoding-raw"]

# logging sub-features
colors      = []
